# gitk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cli.py  dev-requirements.txt  generator.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  utils.py
.github/: dependabot.yaml
.github/workflows/: publish.yaml  tests.yaml  tests.yml
core/: __init__.py  __main__.py  adapters.py  args_parser.py  config.py  constants.py  exceptions.py  generator.py  init_config.py  logger.py  models.py  prompt.py  runner.py  templates.py  utils.py
core/cli/: args_parser.py  cli.py  commands.py
core/config/: config.py  files.py  paths.py
i18n/: extract_strings.sh  update_translations.sh
i18n/locale/: template.pot
i18n/locale/ru/LC_MESSAGES/: gitk.mo  gitk.po
lib/: i18n.sh
locale/en/: help.txt
locale/ru/: help.txt
scripts/: add.bash  gitk-add  gitk-commit  gitk-init  gitk-push  push.bash
tests/: test_cache_directory.py  test_cache_file.py  test_commands.py  test_config.py  test_generator.py  test_integration_adapters.py  test_integration_cli.py  test_models.py  test_provider.py  test_templates.py
