[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitk"
version = "0.1.0"
description = "AI-powered CLI tool for generating git commit messages"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "xifOO", email = "wedyi28111@gmail.com"}]
keywords = ["git", "commit", "ai", "cli"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Version Control",
  "Environment :: Console"
]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "blessed==1.21.0",
  "cachetools==6.1.0",
  "certifi==2025.7.14",
  "charset-normalizer==3.4.2",
  "distro==1.9.0",
  "editor==1.6.6",
  "grpcio==1.73.1",
  "grpcio-status==1.71.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httplib2==0.22.0",
  "httpx==0.28.1",
  "idna==3.10",
  "iniconfig==2.1.0",
  "inquirer==3.4.0",
  "jiter==0.10.0",
  "openai==1.97.0",
  "packaging==25.0",
  "prompt_toolkit==3.0.51",
  "proto-plus==1.26.1",
  "protobuf==5.29.5",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pydantic==2.11.7",
  "pydantic_core==2.38.0",
  "Pygments==2.19.2",
  "pyparsing==3.2.3",
  "PyYAML==6.0.2",
  "questionary==2.1.0",
  "readchar==4.2.1",
  "regex==2024.11.6",
  "requests==2.32.4",
  "rsa==4.9.1",
  "six==1.17.0",
  "sniffio==1.3.1",
  "tqdm==4.67.1",
  "typing-inspection==0.4.1",
  "typing_extensions==4.14.1",
  "uritemplate==4.2.0",
  "urllib3==2.5.0",
  "wcwidth==0.2.13",
  "xmod==1.8.1",
  "click==8.2.1",
]

[project.scripts]
gitk = "core.cli.commands:cli"

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "I",
  "B",
  "A",
  "C4",
  "S",
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = 3.12
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = "^tests/"