[tool.poetry]
name = "gitk"
version = "0.1.3"
description = "AI-powered CLI tool for generating git commit messages"
authors = ["xifOO <wedyi28111@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "core"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control",
    "Environment :: Console"
]
keywords = ["git", "commit", "ai", "cli"]

[tool.poetry.dependencies]
python = "^3.11"
click = ">=8.0.0,<9.0.0"
questionary = ">=1.10.0,<3.0.0"
requests = ">=2.25.0,<3.0.0"
pyyaml = ">=6.0,<7.0"
pydantic = ">=1.10.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.0,<26.0"
ruff = ">=0.1.0,<0.13.0"
mypy = ">=1.0,<2.0"
pytest = ">=7.0,<8.0"

[tool.poetry.scripts]
gitk = "core.cli.commands:cli"

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "I",
  "B",
  "A",
  "C4",
  "S",
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = "^tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"